# aig_tp2

./: .gitignore  README.md  TP2_StarterPack_Students.ipynb  pyproject.toml
students/outputs/20260526-162216_ci_seeds/: seed_prompts.csv  seed_prompts.json
students/outputs/20260526-205951_ci_seeds/: seed_prompts.csv  seed_prompts.json
students/outputs/20260526-212353_ci_seeds/: seed_prompts.csv  seed_prompts.json
students/outputs/20260527-210917_ci_seeds/: seed_prompts.csv  seed_prompts.json
students/outputs/20260527-211005_ollama_refine/: refine_loop.csv  refine_loop.json
students/outputs/20260527-211057_ollama_refine/: refine_loop.csv  refine_loop.json
students/outputs/20260527-211117_ollama_refine/: refine_loop.csv  refine_loop.json
students/outputs/20260527-211141_ollama_refine/: refine_loop.csv  refine_loop.json
students/outputs/20260527-211245_ollama_refine/: refine_loop.csv  refine_loop.json
students/outputs/20260527-211326_ollama_refine/: refine_loop.csv  refine_loop.json
