[project]
name = "aig-tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "clip-interrogator>=0.6.0",
    "diffusers[torch]>=0.37.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "open-clip-torch>=2.24.0",
    "pandas<3",
    "pillow<12",
    "safetensors>=0.7.0",
    "torch>=2.6.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
